--- a/products.html
+++ b/products.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Fawaz Fragrence</title>
+  <title>Fawaz Fragnance</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
   <style>
     :root{
@@ -693,7 +693,7 @@
   <div class="footer-bottom">
     <div class="footer-bottom-content">
       <div class="footer-legal">
-        <p>&copy; 2025 Al-Abwa Perfumes. All rights reserved.</p>
+        <p>&copy; 2025 Fawaz Fragnance. All rights reserved. Crafted by Eaz Nexora</p>
         <div class="legal-links">
           <a href="#privacy">Privacy Policy</a>
           <a href="#terms">Terms of Service</a>
@@ -1014,3 +1014,4 @@ function goToDetails(imgElement) {
 
 </body>
 </html>
+
