--- a/product-details.html
+++ b/product-details.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Fawaz Fragrence</title>
+  <title>Fawaz Fragnance</title>
   <link rel="stylesheet" href="style.css"/>
   <style>
     :root{
@@ -619,7 +619,7 @@
   <div class="footer-bottom">
     <div class="footer-bottom-content">
       <div class="footer-legal">
-        <p>&copy; 2025 Al-Abwa Perfumes. All rights reserved.</p>
+        <p>&copy; 2025 Fawaz Fragnance. All rights reserved. Crafted by Eaz Nexora</p>
         <div class="legal-links">
           <a href="#privacy">Privacy Policy</a>
           <a href="#terms">Terms of Service</a>
@@ -959,3 +959,4 @@
 
 </body>
 </html>
+
