--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@ footer{background:#111;color:#eee;text-align:center;padding:40px 16px;margin-top
   <!-- Navbar -->
   <nav class="navbar">
     <div class="nav-top">
-      <div class="logo">Fawaz Fragrence</div>
+      <div class="logo">Fawaz Fragnance</div>
       <div class="hamburger" id="hamburgerBtn"><span></span><span></span><span></span></div>
     </div>
     <div class="search-mobile"><input id="searchInput" placeholder="Search perfumes..." /></div>
@@ -1213,4 +1213,5 @@ function goToDetails(img) {
 
 </body>
 </html>
+
 
