--- a/products.html
+++ b/products.html
@@ -339,7 +339,7 @@
   <!-- Navbar -->
   <nav class="navbar">
     <div class="nav-top">
-      <div class="logo">Fawaz Fragrence</div>
+      <div class="logo">Fawaz Fragnance</div>
       <div class="hamburger" id="hamburgerBtn"><span></span><span></span><span></span></div>
     </div>
     <div class="search-mobile"><input id="searchInput" placeholder="Search perfumes..." /></div>
@@ -1014,4 +1014,5 @@ function goToDetails(imgElement) {
 
 </body>
 </html>
+
 
