--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Fawaz Fragnance | Where Elegance Meets Essence</title>
+  <title>Fawaz Fragrence | Where Elegance Meets Essence</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
   <style>
     :root{
@@ -425,7 +425,7 @@ footer{background:#111;color:#eee;text-align:center;padding:40px 16px;margin-top
   <!-- Navbar -->
   <nav class="navbar">
     <div class="nav-top">
-      <div class="logo">Fawaz Fragnance</div>
+      <div class="logo">Fawaz Fragrence</div>
       <div class="hamburger" id="hamburgerBtn"><span></span><span></span><span></span></div>
     </div>
     <div class="search-mobile"><input id="searchInput" placeholder="Search perfumes..." /></div>
@@ -475,18 +475,18 @@ footer{background:#111;color:#eee;text-align:center;padding:40px 16px;margin-top
     <!-- Product card 1 -->
     <div class="product">
       <div class="image-wrap">
-        <img src="perfume4.jpeg" alt="Amber Noir" onclick="goToDetails(this)">
+        <img src="./Attar Photos/Burberry Weekend6.png" alt="Burberry Weekend" onclick="goToDetails(this)">
         <button class="arrow-btn" aria-hidden="true">›</button>
       </div>
       <div class="info">
-        <h3>Amber Noir</h3>
+        <h3>Burberry Weekend</h3>
         <p class="description">Rich amber with warm spice undertones — long lasting and intimate.</p>
         <div class="card-footer">
           <div>
             <div class="price">₹120</div>
             <div class="tags">
-              <span class="tag">Perfume Lover</span>
-              <span class="tag">Fragrance</span>
+              <span class="tag">Daytime</span>
+              <span class="tag">Burberry</span>
             </div>
           </div>
           <button class="add-btn">Add to Cart</button>
@@ -497,18 +497,18 @@ footer{background:#111;color:#eee;text-align:center;padding:40px 16px;margin-top
     <!-- Product card 2 -->
     <div class="product">
       <div class="image-wrap">
-        <img src="perfume3.jpeg" alt="Velour Rose" onclick="goToDetails(this)">
+        <img src="./Attar Photos/Dlove Sauvage8.png" alt="D' love Sauvage" onclick="goToDetails(this)">
         <button class="arrow-btn" aria-hidden="true">›</button>
       </div>
       <div class="info">
-        <h3>Velour Rose</h3>
+        <h3>D' love Sauvage</h3>
         <p class="description">Soft rose petals with a velvety finish and romantic sillage.</p>
         <div class="card-footer">
           <div>
             <div class="price">₹95</div>
             <div class="tags">
               <span class="tag">Floral</span>
-              <span class="tag">Everyday</span>
+              <span class="tag">D'</span>
             </div>
           </div>
           <button class="add-btn">Add to Cart</button>
@@ -519,18 +519,18 @@ footer{background:#111;color:#eee;text-align:center;padding:40px 16px;margin-top
     <!-- Product card 3 -->
     <div class="product">
       <div class="image-wrap">
-        <img src="perfume2.jpeg" alt="Ocean Mist" onclick="goToDetails(this)">
+        <img src="./Attar Photos/Musk Rose11.png" alt="Musk Rose" onclick="goToDetails(this)">
         <button class="arrow-btn" aria-hidden="true">›</button>
       </div>
       <div class="info">
-        <h3>Ocean Mist</h3>
+        <h3>Musk Rose</h3>
         <p class="description">Fresh aquatic notes with crisp citrus — clean and invigorating.</p>
         <div class="card-footer">
           <div>
             <div class="price">₹80</div>
             <div class="tags">
               <span class="tag">Fresh</span>
-              <span class="tag">Daytime</span>
+              <span class="tag">Musk</span>
             </div>
           </div>
           <button class="add-btn">Add to Cart</button>
@@ -541,18 +541,18 @@ footer{background:#111;color:#eee;text-align:center;padding:40px 16px;margin-top
     <!-- Product card 4 -->
     <div class="product">
       <div class="image-wrap">
-        <img src="perfume1.jpeg" alt="Royal Oud" onclick="goToDetails(this)">
+        <img src="./Attar Photos/Oud Lavender15.png" alt="Oud Lavender" onclick="goToDetails(this)">
         <button class="arrow-btn" aria-hidden="true">›</button>
       </div>
       <div class="info">
-        <h3>Royal Oud</h3>
+        <h3>Oud Lavender</h3>
         <p class="description">Deep oud fragrance with regal notes — bold, luxurious, long-lasting.</p>
         <div class="card-footer">
           <div>
             <div class="price">₹150</div>
             <div class="tags">
               <span class="tag">Premium</span>
-              <span class="tag">Evening</span>
+              <span class="tag">Oud</span>
             </div>
           </div>
           <button class="add-btn">Add to Cart</button>
@@ -671,7 +671,7 @@ footer{background:#111;color:#eee;text-align:center;padding:40px 16px;margin-top
   <div class="footer-bottom">
     <div class="footer-bottom-content">
       <div class="footer-legal">
-        <p>&copy; 2025 Fawaz Fragnance. All rights reserved. Crafted by Eaz Nexora</p>
+        <p>&copy; 2025 Fawaz Fragrence. All rights reserved. Crafted by Eaz Nexora</p>
         <div class="legal-links">
           <a href="#privacy">Privacy Policy</a>
           <a href="#terms">Terms of Service</a>
@@ -1213,5 +1213,3 @@ function goToDetails(img) {
 
 </body>
 </html>
-
-
