--- a/products.html
+++ b/products.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Fawaz Fragnance</title>
+  <title>Fawaz Fragrence</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
   <style>
     :root{
@@ -339,7 +339,7 @@
   <!-- Navbar -->
   <nav class="navbar">
     <div class="nav-top">
-      <div class="logo">Fawaz Fragnance</div>
+      <div class="logo">Fawaz Fragrence</div>
       <div class="hamburger" id="hamburgerBtn"><span></span><span></span><span></span></div>
     </div>
     <div class="search-mobile"><input id="searchInput" placeholder="Search perfumes..." /></div>
@@ -583,6 +583,206 @@
       </div>
     </div>
 
+    <!-- Product 6 -->
+    <div class="product" data-category="Modern"
+         data-name="Burberry Weekend"
+         data-price="85"
+         data-img="./Attar Photos/Burberry Weekend6.png"
+         data-desc="Sharp citrus explosion — energizing.">
+      <div class="image-wrap">
+        <img src="./Attar Photos/Burberry Weekend6.png" alt="Burberry Weekend" onclick="goToDetails(this)">
+        <button class="arrow-btn">›</button>
+      </div>
+      <div class="info">
+        <h3>Burberry Weekend</h3>
+        <p class="description">Sharp citrus explosion — energizing.</p>
+        <div class="card-footer">
+          <div><div class="price">₹85</div><div class="tags"><span class="tag">Modern</span><span class="tag">Burberry</span></div></div>
+          <button class="add-btn">Add to Cart</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- Product 7 -->
+    <div class="product" data-category="Modern"
+         data-name="D' Blue"
+         data-price="85"
+         data-img="./Attar Photos/D Blue7.png"
+         data-desc="Sharp citrus explosion — energizing.">
+      <div class="image-wrap">
+        <img src="./Attar Photos/D Blue7.png" alt="D' Blue" onclick="goToDetails(this)">
+        <button class="arrow-btn">›</button>
+      </div>
+      <div class="info">
+        <h3>D' Blue</h3>
+        <p class="description">Sharp citrus explosion — energizing.</p>
+        <div class="card-footer">
+          <div><div class="price">₹85</div><div class="tags"><span class="tag">Modern</span><span class="tag">D</span></div></div>
+          <button class="add-btn">Add to Cart</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- Product 8 -->
+    <div class="product" data-category="Modern"
+         data-name="D' love Sauvage"
+         data-price="85"
+         data-img="./Attar Photos/Dlove Sauvage8.png"
+         data-desc="Sharp citrus explosion — energizing.">
+      <div class="image-wrap">
+        <img src="./Attar Photos/Dlove Sauvage8.png" alt="D' love Sauvage" onclick="goToDetails(this)">
+        <button class="arrow-btn">›</button>
+      </div>
+      <div class="info">
+        <h3>D' love Sauvage</h3>
+        <p class="description">Sharp citrus explosion — energizing.</p>
+        <div class="card-footer">
+          <div><div class="price">₹85</div><div class="tags"><span class="tag">Modern</span><span class="tag">D</span></div></div>
+          <button class="add-btn">Add to Cart</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- Product 9 -->
+    <div class="product" data-category="Modern"
+         data-name="Majestic"
+         data-price="85"
+         data-img="./Attar Photos/Majestic9.png"
+         data-desc="Sharp citrus explosion — energizing.">
+      <div class="image-wrap">
+        <img src="./Attar Photos/Majestic9.png" alt="Majestic" onclick="goToDetails(this)">
+        <button class="arrow-btn">›</button>
+      </div>
+      <div class="info">
+        <h3>Majestic</h3>
+        <p class="description">Sharp citrus explosion — energizing.</p>
+        <div class="card-footer">
+          <div><div class="price">₹85</div><div class="tags"><span class="tag">Modern</span><span class="tag">Majestic</span></div></div>
+          <button class="add-btn">Add to Cart</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- Product 10 -->
+    <div class="product" data-category="Modern"
+         data-name="Musk Rijali"
+         data-price="85"
+         data-img="./Attar Photos/Musk Rijali10.png"
+         data-desc="Sharp citrus explosion — energizing.">
+      <div class="image-wrap">
+        <img src="./Attar Photos/Musk Rijali10.png" alt="Musk Rijali" onclick="goToDetails(this)">
+        <button class="arrow-btn">›</button>
+      </div>
+      <div class="info">
+        <h3>Musk Rijali</h3>
+        <p class="description">Sharp citrus explosion — energizing.</p>
+        <div class="card-footer">
+          <div><div class="price">₹85</div><div class="tags"><span class="tag">Modern</span><span class="tag">Musk</span></div></div>
+          <button class="add-btn">Add to Cart</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- Product 11 -->
+    <div class="product" data-category="Modern"
+         data-name="Musk Rose"
+         data-price="85"
+         data-img="./Attar Photos/Musk Rose11.png"
+         data-desc="Sharp citrus explosion — energizing.">
+      <div class="image-wrap">
+        <img src="./Attar Photos/Musk Rose11.png" alt="Musk Rose" onclick="goToDetails(this)">
+        <button class="arrow-btn">›</button>
+      </div>
+      <div class="info">
+        <h3>Musk Rose</h3>
+        <p class="description">Sharp citrus explosion — energizing.</p>
+        <div class="card-footer">
+          <div><div class="price">₹85</div><div class="tags"><span class="tag">Modern</span><span class="tag">Musk</span></div></div>
+          <button class="add-btn">Add to Cart</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- Product 12 -->
+    <div class="product" data-category="Modern"
+         data-name="Oud 9"
+         data-price="85"
+         data-img="./Attar Photos/Oud 912.png"
+         data-desc="Sharp citrus explosion — energizing.">
+      <div class="image-wrap">
+        <img src="./Attar Photos/Oud 912.png" alt="Oud 9" onclick="goToDetails(this)">
+        <button class="arrow-btn">›</button>
+      </div>
+      <div class="info">
+        <h3>Oud 9</h3>
+        <p class="description">Sharp citrus explosion — energizing.</p>
+        <div class="card-footer">
+          <div><div class="price">₹85</div><div class="tags"><span class="tag">Modern</span><span class="tag">Oud</span></div></div>
+          <button class="add-btn">Add to Cart</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- Product 13 -->
+    <div class="product" data-category="Modern"
+         data-name="Oud Kashmiri"
+         data-price="85"
+         data-img="./Attar Photos/Oud Kashmiri13.png"
+         data-desc="Sharp citrus explosion — energizing.">
+      <div class="image-wrap">
+        <img src="./Attar Photos/Oud Kashmiri13.png" alt="Oud Kashmiri" onclick="goToDetails(this)">
+        <button class="arrow-btn">›</button>
+      </div>
+      <div class="info">
+        <h3>Oud Kashmiri</h3>
+        <p class="description">Sharp citrus explosion — energizing.</p>
+        <div class="card-footer">
+          <div><div class="price">₹85</div><div class="tags"><span class="tag">Modern</span><span class="tag">Oud</span></div></div>
+          <button class="add-btn">Add to Cart</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- Product 14 -->
+    <div class="product" data-category="Modern"
+         data-name="Oud Kuwaiti"
+         data-price="85"
+         data-img="./Attar Photos/Oud Kuwaiti14.png"
+         data-desc="Sharp citrus explosion — energizing.">
+      <div class="image-wrap">
+        <img src="./Attar Photos/Oud Kuwaiti14.png" alt="Oud Kuwaiti" onclick="goToDetails(this)">
+        <button class="arrow-btn">›</button>
+      </div>
+      <div class="info">
+        <h3>Oud Kuwaiti</h3>
+        <p class="description">Sharp citrus explosion — energizing.</p>
+        <div class="card-footer">
+          <div><div class="price">₹85</div><div class="tags"><span class="tag">Modern</span><span class="tag">Oud</span></div></div>
+          <button class="add-btn">Add to Cart</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- Product 15 -->
+    <div class="product" data-category="Modern"
+         data-name="Oud Lavender"
+         data-price="85"
+         data-img="./Attar Photos/Oud Lavender15.png"
+         data-desc="Sharp citrus explosion — energizing.">
+      <div class="image-wrap">
+        <img src="./Attar Photos/Oud Lavender15.png" alt="Oud Lavender" onclick="goToDetails(this)">
+        <button class="arrow-btn">›</button>
+      </div>
+      <div class="info">
+        <h3>Oud Lavender</h3>
+        <p class="description">Sharp citrus explosion — energizing.</p>
+        <div class="card-footer">
+          <div><div class="price">₹85</div><div class="tags"><span class="tag">Modern</span><span class="tag">Oud</span></div></div>
+          <button class="add-btn">Add to Cart</button>
+        </div>
+      </div>
+    </div>
+
   </div>
 </section>
 
@@ -693,7 +893,7 @@
   <div class="footer-bottom">
     <div class="footer-bottom-content">
       <div class="footer-legal">
-        <p>&copy; 2025 Fawaz Fragnance. All rights reserved. Crafted by Eaz Nexora</p>
+        <p>&copy; 2025 Al-Abwa Perfumes. All rights reserved.</p>
         <div class="legal-links">
           <a href="#privacy">Privacy Policy</a>
           <a href="#terms">Terms of Service</a>
@@ -1014,5 +1214,3 @@ function goToDetails(imgElement) {
 
 </body>
 </html>
-
-
