--- a/products.html
+++ b/products.html
@@ -893,7 +893,7 @@
   <div class="footer-bottom">
     <div class="footer-bottom-content">
       <div class="footer-legal">
-        <p>&copy; 2025 Al-Abwa Perfumes. All rights reserved.</p>
+        <p>&copy; 2025 Fawaz Fragrence. All rights reserved. Crafted by Eaz Nexora</p>
         <div class="legal-links">
           <a href="#privacy">Privacy Policy</a>
           <a href="#terms">Terms of Service</a>
@@ -1214,3 +1214,4 @@ function goToDetails(imgElement) {
 
 </body>
 </html>
+
