--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@ footer{background:#111;color:#eee;text-align:center;padding:40px 16px;margin-top
       <a href="#shop" class="cta">Shop Now</a>
     </div>
     <div class="hero-right">
-      <div class="bottle"><img src="perfume5.jpeg" alt="Perfume Bottle"></div>
+      <div class="bottle"><img src="banner.jpg" alt="Perfume Bottle"></div>
     </div>
   </section>
 
