--- a/journal.html
+++ b/journal.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Fawaz Fragnance</title>
+  <title>Fawaz Fragrence</title>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
   <style>
     :root {
@@ -309,7 +309,7 @@
   <!-- Navbar -->
   <nav class="navbar">
     <div class="nav-top">
-      <div class="logo">Fawaz Fragnance</div>
+      <div class="logo">Fawaz Fragrence</div>
       <div class="hamburger" id="hamburgerBtn"><span></span><span></span><span></span></div>
     </div>
     <div class="search-mobile"><input id="searchInput" placeholder="Search journal..." /></div>
@@ -398,9 +398,9 @@
         <div class="social-links">
           <a href="#" class="social-link"><span>📘</span> Facebook</a>
           <a href="#" class="social-link"><span>📷</span> Instagram</a>
-          <a href="#" class="social-link"><span>🐦</span> Twitter</a>
+     <!-- <a href="#" class="social-link"><span>🐦</span> Twitter</a>
           <a href="#" class="social-link"><span>📌</span> Pinterest</a>
-          <a href="#" class="social-link"><span>📱</span> TikTok</a>
+          <a href="#" class="social-link"><span>📱</span> TikTok</a> -->
         </div>
         <div class="contact-info">
           <p><strong>Customer Service</strong></p>
@@ -416,7 +416,7 @@
   <div class="footer-bottom">
     <div class="footer-bottom-content">
       <div class="footer-legal">
-        <p>&copy; 2025 Fawaz Fragnance. All rights reserved. Crafted by Eaz Nexora</p>
+        <p>&copy; 2025 Fawaz Fragrence. All rights reserved. Crafted by Eaz Nexora</p>
         <div class="legal-links">
           <a href="#privacy">Privacy Policy</a>
           <a href="#terms">Terms of Service</a>
@@ -451,4 +451,3 @@
   </script>
 </body>
 </html>
-
