--- a/product-details.html
+++ b/product-details.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Fawaz Fragnance</title>
+  <title>Fawaz Fragrence</title>
   <link rel="stylesheet" href="style.css"/>
   <style>
     :root{
@@ -601,9 +601,9 @@
         <div class="social-links">
           <a href="#" class="social-link"><span>📘</span> Facebook</a>
           <a href="#" class="social-link"><span>📷</span> Instagram</a>
-          <a href="#" class="social-link"><span>🐦</span> Twitter</a>
+     <!-- <a href="#" class="social-link"><span>🐦</span> Twitter</a>
           <a href="#" class="social-link"><span>📌</span> Pinterest</a>
-          <a href="#" class="social-link"><span>📱</span> TikTok</a>
+          <a href="#" class="social-link"><span>📱</span> TikTok</a> -->
         </div>
         <div class="contact-info">
           <p><strong>Customer Service</strong></p>
@@ -619,7 +619,7 @@
   <div class="footer-bottom">
     <div class="footer-bottom-content">
       <div class="footer-legal">
-        <p>&copy; 2025 Fawaz Fragnance. All rights reserved. Crafted by Eaz Nexora</p>
+        <p>&copy; 2025 Al-Abwa Perfumes. All rights reserved.</p>
         <div class="legal-links">
           <a href="#privacy">Privacy Policy</a>
           <a href="#terms">Terms of Service</a>
@@ -959,4 +959,3 @@
 
 </body>
 </html>
-
